force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Capacity__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Capacity__c</fullName>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>