force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Health_Index__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Health_Index__c</fullName>
    <inlineHelpText>Tracks the number of plants in each garden and provides a health score based on the proportion of sick plants</inlineHelpText>
    <label>Health Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>