force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Irrigation_System__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Irrigation_System__c</fullName>
    <label>Irrigation System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>