force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Manager__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user responsible for managing the garden</inlineHelpText>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gardens</relationshipName>
    <type>Lookup</type>
</CustomField>