force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Manager_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Manager_Start_Date__c</fullName>
    <label>Manager Start Date</label>
    <type>Date</type>
</CustomField>