force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Max_Plant_Count__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Max_Plant_Count__c</fullName>
    <label>Maximum Plant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>