force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Minimum_Plant_Count__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Minimum_Plant_Count__c</fullName>
    <inlineHelpText>The minimum number of plants a garden must have</inlineHelpText>
    <label>Minimum Plant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>