force-app/main/default/objects/CAMPX__Garden__c/fields/CAMPX__Type__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backyard</fullName>
            </value>
            <value>
                <fullName>Flowerbed</fullName>
            </value>
            <value>
                <fullName>Frontyard</fullName>
            </value>
            <value>
                <fullName>Greenhouse</fullName>
            </value>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Sideyard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>